Fix: Filter conversation requests - only inject into CREATION requests
PROBLEM IDENTIFIED:
- /conversation endpoint called multiple times with different payloads
- First call: {"includeClosedConversations": false} - query request
- Second call: {"conversationId": "...", "language": "...", "routingAttributes": {}} - creation request
- Our interceptor was catching the WRONG request (the query)

CONSOLE OUTPUT:
📤 Request payload: {
  "includeClosedConversations": false
}
❌ routingAttributes MISSING from request!

ROOT CAUSE:
- url.includes('/conversation') was too broad
- Need to filter for conversation CREATION requests specifically

SOLUTION:
- Added filter: if (body.conversationId && body.language)
- Only inject into requests with conversationId + language
- Ignore query requests (includeClosedConversations)

NEW CONSOLE OUTPUT:
- Query request: "ℹ️ This is a conversation QUERY request - ignoring"
- Creation request: "✅ This is a conversation CREATION request"
- Then inject if routingAttributes empty

EXPECTED RESULT:
- Will now intercept the CORRECT /conversation request
- Prechat data will be injected at the right time
- Salesforce Flow will receive prechat information

Reference HAR structure:
{
  "routingAttributes": {...},
  "conversationId": "00e24237-91cc-4f6a-9d76-575dc7370bcb",
  "language": "en_US"
}

--- a/index.html
+++ b/index.html
@@ -124,36 +124,44 @@ Expected /conversation POST payload:
             const body = JSON.parse(options.body);
             console.log('📤 Original request payload:', JSON.stringify(body, null, 2));
 
-            // Check if routingAttributes is empty or missing
-            if (!body.routingAttributes || Object.keys(body.routingAttributes).length === 0) {
-              console.log('⚠️ routingAttributes is empty - INJECTING prechat data!');
+            // CRITICAL: Only inject into conversation CREATION requests (not queries)
+            // Conversation creation requests have: conversationId, language, routingAttributes
+            if (body.conversationId && body.language) {
+              console.log('✅ This is a conversation CREATION request');
 
-              // Inject our prechat data
-              body.routingAttributes = {
-                _firstName: 'Chat',
-                _lastName: 'TestUser',
-                _email: 'dogz@mailinator.com',
-                _subject: 'Chat Inquiry from Website'
-              };
+              // Check if routingAttributes is empty or missing
+              if (!body.routingAttributes || Object.keys(body.routingAttributes).length === 0) {
+                console.log('⚠️ routingAttributes is empty - INJECTING prechat data!');
 
-              // Update the request body with injected data
-              options = {
-                ...options,
-                body: JSON.stringify(body)
-              };
+                // Inject our prechat data
+                body.routingAttributes = {
+                  _firstName: 'Chat',
+                  _lastName: 'TestUser',
+                  _email: 'dogz@mailinator.com',
+                  _subject: 'Chat Inquiry from Website'
+                };
 
-              console.log('✅ INJECTED routingAttributes:', JSON.stringify(body.routingAttributes, null, 2));
-              console.log('📤 Modified request payload:', JSON.stringify(body, null, 2));
+                // Update the request body with injected data
+                options = {
+                  ...options,
+                  body: JSON.stringify(body)
+                };
+
+                console.log('✅ INJECTED routingAttributes:', JSON.stringify(body.routingAttributes, null, 2));
+                console.log('📤 Modified request payload:', JSON.stringify(body, null, 2));
+              } else {
+                console.log('✅ routingAttributes already populated!');
+                console.log('📧 Email value:', body.routingAttributes._email);
+              }
+
+              window.prechatDebug.networkRequests.push({
+                url: url,
+                body: body,
+                time: new Date().toISOString()
+              });
             } else {
-              console.log('✅ routingAttributes found in request!');
-              console.log('📧 Email value:', body.routingAttributes._email);
+              console.log('ℹ️ This is a conversation QUERY request (not creation) - ignoring');
             }
-
-            window.prechatDebug.networkRequests.push({
-              url: url,
-              body: body,
-              time: new Date().toISOString()
-            });
           } catch (e) {
             console.log('Could not parse request body:', e);
           }
