--- a/index.html
+++ b/index.html
@@ -169,14 +169,16 @@ Expected /conversation POST payload:
       });
 
       // Set hidden prechat field (Channel Variable Name: "Email")
+      // Also trying lowercase "email" in case Flow expects that
       console.log('🔧 Setting hidden prechat fields...');
 
       try {
         embeddedservice_bootstrap.prechatAPI.setHiddenPrechatFields({
-          Email: 'dogz@mailinator.com'
+          Email: 'dogz@mailinator.com',
+          email: 'dogz@mailinator.com'
         });
 
-        console.log('✅ setHiddenPrechatFields({ Email: "dogz@mailinator.com" }) called');
+        console.log('✅ setHiddenPrechatFields called with Email AND email');
 
         window.prechatDebug.attempts.push({
           timing: 'onEmbeddedMessagingReady',
@@ -216,9 +218,10 @@ Expected /conversation POST payload:
           console.log('========================================');
 
           // CRITICAL: Set prechat fields RIGHT BEFORE launching chat
-          // Channel Variable Name: "Email" (confirmed from Salesforce config)
+          // Trying both Email and email in case of case-sensitivity
           const prechatFields = {
-            Email: 'dogz@mailinator.com'
+            Email: 'dogz@mailinator.com',
+            email: 'dogz@mailinator.com'
           };
 
           console.log('🔧 Setting Email field RIGHT BEFORE launch...');
@@ -227,7 +230,7 @@ Expected /conversation POST payload:
           try {
             // Set prechat fields immediately before launching
             embeddedservice_bootstrap.prechatAPI.setHiddenPrechatFields(prechatFields);
-            console.log('✅ setHiddenPrechatFields({ Email: "dogz@mailinator.com" }) called');
+            console.log('✅ setHiddenPrechatFields called with Email AND email');
 
             window.prechatDebug.attempts.push({
               timing: 'Before launchChat()',
