Change hidden prechat field name to email_custom (lowercase)
USER REQUEST: Use email_custom instead of Email

CHANGES:
- Updated field name from Email to email_custom
- Both locations updated:
  1. onEmbeddedMessagingReady (line 176)
  2. Before launchChat() (line 221)

NEW PAYLOAD:
{
  "routingAttributes": {
    "email_custom": "dogz@mailinator.com"
  },
  "conversationId": "...",
  "language": "en_US"
}

IMPORTANT: User must also update Salesforce configuration:
1. Custom Parameters: Change Channel Variable Name to "email_custom"
2. Parameter Mappings: Map email_custom to Flow variable
3. Flow variable: Create/rename to match (if needed)

--- a/index.html
+++ b/index.html
@@ -168,17 +168,15 @@ Expected /conversation POST payload:
         time: new Date().toISOString()
       });
 
-      // Set hidden prechat field (Channel Variable Name: "Email")
-      // Also trying lowercase "email" in case Flow expects that
+      // Set hidden prechat field (Channel Variable Name: "email_custom")
       console.log('🔧 Setting hidden prechat fields...');
 
       try {
         embeddedservice_bootstrap.prechatAPI.setHiddenPrechatFields({
-          Email: 'dogz@mailinator.com',
-          email: 'dogz@mailinator.com'
+          email_custom: 'dogz@mailinator.com'
         });
 
-        console.log('✅ setHiddenPrechatFields called with Email AND email');
+        console.log('✅ setHiddenPrechatFields({ email_custom: "dogz@mailinator.com" }) called');
 
         window.prechatDebug.attempts.push({
           timing: 'onEmbeddedMessagingReady',
@@ -218,19 +216,18 @@ Expected /conversation POST payload:
           console.log('========================================');
 
           // CRITICAL: Set prechat fields RIGHT BEFORE launching chat
-          // Trying both Email and email in case of case-sensitivity
+          // Channel Variable Name: "email_custom" (lowercase)
           const prechatFields = {
-            Email: 'dogz@mailinator.com',
-            email: 'dogz@mailinator.com'
+            email_custom: 'dogz@mailinator.com'
           };
 
-          console.log('🔧 Setting Email field RIGHT BEFORE launch...');
+          console.log('🔧 Setting email_custom field RIGHT BEFORE launch...');
           console.log('📋 Fields:', JSON.stringify(prechatFields, null, 2));
 
           try {
             // Set prechat fields immediately before launching
             embeddedservice_bootstrap.prechatAPI.setHiddenPrechatFields(prechatFields);
-            console.log('✅ setHiddenPrechatFields called with Email AND email');
+            console.log('✅ setHiddenPrechatFields({ email_custom: "dogz@mailinator.com" }) called');
 
             window.prechatDebug.attempts.push({
               timing: 'Before launchChat()',
