Revert back to email_custom - user confirmed Salesforce config uses this
User confirmed: Hidden prechat field in Salesforce is email_custom

Code now sends:
{
  email_custom: 'dogz@mailinator.com'
}

Expected payload to Salesforce:
{
  "routingAttributes": {
    "email_custom": "dogz@mailinator.com"
  },
  "conversationId": "...",
  "language": "en_US"
}

CRITICAL: User must ensure Salesforce has:
1. Custom Parameter: email_custom added to Hidden Pre-Chat Fields
2. Parameter Mapping: email_custom mapped to Flow variable
3. Flow variable: email_custom exists with Available for input checked

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ Expected /conversation POST payload:
           console.log('========================================');
 
           // CRITICAL: Set prechat fields RIGHT BEFORE launching chat
-          // Channel Variable Name: "email_custom" (lowercase)
+          // Channel Variable Name: "email_custom" (matches Salesforce config)
           const prechatFields = {
             email_custom: 'dogz@mailinator.com'
           };
