--- a/index.html
+++ b/index.html
@@ -47,6 +47,159 @@
       outline: 2px solid var(--capella-red);
       outline-offset: 2px;
     }
+
+    /* Offline Contact Form */
+    #offlineFormContainer {
+      display: none;
+      position: fixed;
+      right: 20px;
+      bottom: 20px;
+      width: 360px;
+      max-height: 600px;
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15);
+      z-index: 3141590;
+      overflow: hidden;
+    }
+
+    #offlineFormContainer.show {
+      display: block;
+      animation: slideIn 0.3s ease-out;
+    }
+
+    @keyframes slideIn {
+      from {
+        transform: translateY(20px);
+        opacity: 0;
+      }
+      to {
+        transform: translateY(0);
+        opacity: 1;
+      }
+    }
+
+    .offline-form-header {
+      background: var(--capella-red);
+      color: white;
+      padding: 16px 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .offline-form-header h3 {
+      margin: 0;
+      font-size: 18px;
+      font-weight: 600;
+    }
+
+    .offline-form-close {
+      background: none;
+      border: none;
+      color: white;
+      font-size: 24px;
+      cursor: pointer;
+      padding: 0;
+      width: 30px;
+      height: 30px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 4px;
+    }
+
+    .offline-form-close:hover {
+      background: rgba(255, 255, 255, 0.1);
+    }
+
+    .offline-form-body {
+      padding: 20px;
+      max-height: 500px;
+      overflow-y: auto;
+    }
+
+    .offline-form-message {
+      background: #f0f0f0;
+      padding: 12px;
+      border-radius: 8px;
+      margin-bottom: 16px;
+      font-size: 14px;
+      color: #333;
+    }
+
+    .form-group {
+      margin-bottom: 16px;
+    }
+
+    .form-group label {
+      display: block;
+      margin-bottom: 6px;
+      font-weight: 500;
+      font-size: 14px;
+      color: #333;
+    }
+
+    .form-group input,
+    .form-group textarea {
+      width: 100%;
+      padding: 10px 12px;
+      border: 1px solid #ddd;
+      border-radius: 6px;
+      font-size: 14px;
+      font-family: inherit;
+      box-sizing: border-box;
+    }
+
+    .form-group input:focus,
+    .form-group textarea:focus {
+      outline: none;
+      border-color: var(--capella-red);
+      box-shadow: 0 0 0 3px rgba(193, 0, 22, 0.1);
+    }
+
+    .form-group textarea {
+      resize: vertical;
+      min-height: 100px;
+    }
+
+    .form-submit {
+      background: var(--capella-red);
+      color: white;
+      border: none;
+      padding: 12px 24px;
+      border-radius: 6px;
+      font-size: 15px;
+      font-weight: 600;
+      cursor: pointer;
+      width: 100%;
+      transition: background 0.2s ease;
+    }
+
+    .form-submit:hover {
+      background: var(--capella-red-dark);
+    }
+
+    .form-submit:disabled {
+      background: #ccc;
+      cursor: not-allowed;
+    }
+
+    .form-success {
+      display: none;
+      text-align: center;
+      padding: 40px 20px;
+    }
+
+    .form-success.show {
+      display: block;
+    }
+
+    .form-success-icon {
+      font-size: 48px;
+      color: #4caf50;
+      margin-bottom: 16px;
+    }
   </style>
 </head>
 <body>
@@ -101,6 +254,45 @@ Expected /conversation POST payload:
   <!-- Your branded launcher -->
   <button id="capellaChatBtn" aria-label="Chat with us">Chat</button>
 
+  <!-- Offline Contact Form -->
+  <div id="offlineFormContainer">
+    <div class="offline-form-header">
+      <h3>Contact Us</h3>
+      <button class="offline-form-close" aria-label="Close" onclick="hideOfflineForm()">×</button>
+    </div>
+    <div class="offline-form-body">
+      <div id="offlineFormContent">
+        <div class="offline-form-message">
+          Our support team is currently unavailable. Please leave your message and we'll get back to you as soon as possible.
+        </div>
+        <form id="offlineContactForm" onsubmit="submitOfflineForm(event)">
+          <div class="form-group">
+            <label for="offline_name">Name *</label>
+            <input type="text" id="offline_name" name="name" required>
+          </div>
+          <div class="form-group">
+            <label for="offline_email">Email *</label>
+            <input type="email" id="offline_email" name="email" required>
+          </div>
+          <div class="form-group">
+            <label for="offline_subject">Subject *</label>
+            <input type="text" id="offline_subject" name="subject" required>
+          </div>
+          <div class="form-group">
+            <label for="offline_message">Message *</label>
+            <textarea id="offline_message" name="description" required></textarea>
+          </div>
+          <button type="submit" class="form-submit" id="offlineSubmitBtn">Send Message</button>
+        </form>
+      </div>
+      <div id="offlineFormSuccess" class="form-success">
+        <div class="form-success-icon">✓</div>
+        <h3>Thank you!</h3>
+        <p>We've received your message and will get back to you soon.</p>
+      </div>
+    </div>
+  </div>
+
   <script>
     // DEBUG: Track all prechat attempts
     window.prechatDebug = {
@@ -132,6 +324,110 @@ Expected /conversation POST payload:
 
       return originalFetch.apply(this, args);
     };
+
+    // ============================================
+    // OFFLINE SUPPORT & BUSINESS HOURS LOGIC
+    // ============================================
+
+    let isWithinBusinessHours = true; // Default to true until we know otherwise
+    let noAgentsAvailable = false;
+
+    // Show/Hide Functions
+    function showChatButton() {
+      const btn = document.getElementById('capellaChatBtn');
+      if (btn) {
+        btn.style.display = 'block';
+        console.log('✅ Chat button shown');
+      }
+    }
+
+    function hideChatButton() {
+      const btn = document.getElementById('capellaChatBtn');
+      if (btn) {
+        btn.style.display = 'none';
+        console.log('❌ Chat button hidden');
+      }
+    }
+
+    function showOfflineForm() {
+      const container = document.getElementById('offlineFormContainer');
+      if (container) {
+        container.classList.add('show');
+        console.log('📝 Offline form shown');
+      }
+    }
+
+    function hideOfflineForm() {
+      const container = document.getElementById('offlineFormContainer');
+      if (container) {
+        container.classList.remove('show');
+        // Reset form
+        document.getElementById('offlineContactForm')?.reset();
+        document.getElementById('offlineFormContent').style.display = 'block';
+        document.getElementById('offlineFormSuccess').classList.remove('show');
+        console.log('❌ Offline form hidden');
+      }
+    }
+
+    // Determine what to show based on availability
+    function updateChatAvailability() {
+      console.log('🔄 Updating chat availability...');
+      console.log('  - Business Hours:', isWithinBusinessHours);
+      console.log('  - Agents Available:', !noAgentsAvailable);
+
+      if (isWithinBusinessHours && !noAgentsAvailable) {
+        // Show chat, hide form
+        showChatButton();
+        hideOfflineForm();
+      } else {
+        // Hide chat, show form
+        hideChatButton();
+        showOfflineForm();
+      }
+    }
+
+    // Offline Form Submission (Web-to-Case)
+    async function submitOfflineForm(event) {
+      event.preventDefault();
+
+      const submitBtn = document.getElementById('offlineSubmitBtn');
+      submitBtn.disabled = true;
+      submitBtn.textContent = 'Sending...';
+
+      const formData = new FormData(event.target);
+      const data = {
+        name: formData.get('name'),
+        email: formData.get('email'),
+        subject: formData.get('subject'),
+        description: formData.get('description'),
+        orgid: '00DEc00000GfZ2M' // Your Salesforce Org ID
+      };
+
+      console.log('📧 Submitting offline form:', data);
+
+      try {
+        // TODO: Replace with your Web-to-Case endpoint or create Case via API
+        // For now, just log and show success
+        await new Promise(resolve => setTimeout(resolve, 1000));
+
+        // Show success message
+        document.getElementById('offlineFormContent').style.display = 'none';
+        document.getElementById('offlineFormSuccess').classList.add('show');
+
+        console.log('✅ Form submitted successfully');
+
+        // Close form after 3 seconds
+        setTimeout(() => {
+          hideOfflineForm();
+        }, 3000);
+
+      } catch (error) {
+        console.error('❌ Error submitting form:', error);
+        alert('Sorry, there was an error submitting your message. Please try again.');
+        submitBtn.disabled = false;
+        submitBtn.textContent = 'Send Message';
+      }
+    }
 
     // Initialize Embedded Messaging
     function initEmbeddedMessaging() {
@@ -289,6 +585,69 @@ Expected /conversation POST payload:
     window.addEventListener('onEmbeddedMessagingConversationClosed', () => {
       document.getElementById('capellaChatBtn').style.display = 'block';
     });
+
+    // ============================================
+    // BUSINESS HOURS & AGENT AVAILABILITY EVENTS
+    // ============================================
+
+    // Check business hours on page load
+    window.addEventListener('onEmbeddedMessagingWithinBusinessHours', (event) => {
+      console.log('========================================');
+      console.log('⏰ EVENT: onEmbeddedMessagingWithinBusinessHours');
+      console.log('========================================');
+      console.log('Within Business Hours:', event.detail.withinBusinessHours);
+
+      isWithinBusinessHours = event.detail.withinBusinessHours;
+      updateChatAvailability();
+    });
+
+    // Business hours started
+    window.addEventListener('onEmbeddedMessagingBusinessHoursStarted', () => {
+      console.log('========================================');
+      console.log('✅ EVENT: Business Hours STARTED');
+      console.log('========================================');
+
+      isWithinBusinessHours = true;
+      updateChatAvailability();
+    });
+
+    // Business hours ended
+    window.addEventListener('onEmbeddedMessagingBusinessHoursEnded', () => {
+      console.log('========================================');
+      console.log('❌ EVENT: Business Hours ENDED');
+      console.log('========================================');
+
+      isWithinBusinessHours = false;
+      updateChatAvailability();
+    });
+
+    // Monitor session status for agent availability
+    window.addEventListener('onEmbeddedMessagingSessionStatusUpdate', (event) => {
+      console.log('========================================');
+      console.log('📊 EVENT: Session Status Update');
+      console.log('========================================');
+      console.log('Status:', event.detail);
+
+      // If session status indicates waiting too long or ended without agent
+      if (event.detail.status === 'Ended' && event.detail.reason === 'NoAgentsAvailable') {
+        console.log('⚠️ No agents available to handle the chat');
+        noAgentsAvailable = true;
+        updateChatAvailability();
+      }
+    });
+
+    // Reset agent availability when ready
+    window.addEventListener('onEmbeddedMessagingReady', () => {
+      console.log('📍 Messaging Ready - resetting agent availability');
+      noAgentsAvailable = false;
+      // Don't call updateChatAvailability yet - wait for business hours event
+    });
+
+    // User clicked offline form button instead of chat
+    function showOfflineFormManually() {
+      hideChatButton();
+      showOfflineForm();
+    }
   </script>
 
   <!-- Salesforce bootstrap -->
