Fix: Handle undefined business hours value
- Issue: Salesforce returns undefined for withinBusinessHours
- This caused isWithinBusinessHours = undefined
- JavaScript treated undefined as falsy, showing offline button instead of chat
- Fix: Explicitly check for undefined and default to true (chat available)
- Now chat button will show when business hours value is undefined

--- a/index.html
+++ b/index.html
@@ -964,7 +964,16 @@ Expected /conversation POST payload:
       console.log('Within Business Hours:', event.detail.withinBusinessHours);
 
       businessHoursEventFired = true; // Mark that business hours are configured
-      isWithinBusinessHours = event.detail.withinBusinessHours;
+
+      // Handle undefined as true (chat available by default)
+      // Salesforce may return undefined if business hours not properly configured
+      if (event.detail.withinBusinessHours === undefined) {
+        console.log('⚠️ Business hours value is undefined - treating as TRUE (chat available)');
+        isWithinBusinessHours = true;
+      } else {
+        isWithinBusinessHours = event.detail.withinBusinessHours;
+      }
+
       updateChatAvailability('business_hours_event');
     });
 
