--- a/index.html
+++ b/index.html
@@ -391,6 +391,178 @@
       line-height: 1;
     }
 
+    /* Prechat Editor Styles */
+    .prechat-info-box {
+      background: var(--capella-gray-50);
+      border: 2px solid var(--capella-gray-200);
+      border-radius: var(--radius-lg);
+      padding: var(--spacing-xl);
+      margin: var(--spacing-xl) 0;
+    }
+
+    .prechat-info-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: var(--spacing-lg);
+    }
+
+    .prechat-info-header h3 {
+      margin: 0;
+      color: var(--capella-gray-900);
+      font-size: 18px;
+    }
+
+    .edit-prechat-btn {
+      background: var(--capella-red);
+      color: white;
+      border: none;
+      padding: 8px 16px;
+      border-radius: var(--radius-md);
+      font-size: var(--font-size-sm);
+      font-weight: 600;
+      cursor: pointer;
+      transition: all 0.2s ease;
+    }
+
+    .edit-prechat-btn:hover {
+      background: var(--capella-red-hover);
+      transform: translateY(-1px);
+    }
+
+    .prechat-values {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: var(--spacing-md);
+    }
+
+    .prechat-value-item {
+      display: flex;
+      flex-direction: column;
+      gap: 4px;
+    }
+
+    .prechat-value-label {
+      font-weight: 600;
+      font-size: var(--font-size-sm);
+      color: var(--capella-gray-700);
+    }
+
+    .prechat-value-text {
+      color: var(--capella-gray-900);
+      font-size: var(--font-size-base);
+    }
+
+    /* Prechat Editor Modal */
+    #prechatEditorModal {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: rgba(0, 0, 0, 0.5);
+      z-index: 9999;
+      justify-content: center;
+      align-items: center;
+      padding: 20px;
+    }
+
+    #prechatEditorModal.show {
+      display: flex;
+    }
+
+    .prechat-editor-content {
+      background: white;
+      border-radius: var(--radius-xl);
+      max-width: 600px;
+      width: 100%;
+      max-height: 90vh;
+      overflow-y: auto;
+      box-shadow: var(--shadow-xl);
+    }
+
+    .prechat-editor-header {
+      background: var(--capella-red);
+      color: white;
+      padding: var(--spacing-xl) var(--spacing-2xl);
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      border-radius: var(--radius-xl) var(--radius-xl) 0 0;
+    }
+
+    .prechat-editor-header h3 {
+      margin: 0;
+      font-size: 20px;
+      font-weight: 700;
+    }
+
+    .prechat-editor-close {
+      background: transparent;
+      border: none;
+      color: white;
+      font-size: 28px;
+      cursor: pointer;
+      padding: 0;
+      width: 32px;
+      height: 32px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: var(--radius-sm);
+      transition: background 0.2s ease;
+    }
+
+    .prechat-editor-close:hover {
+      background: rgba(255, 255, 255, 0.15);
+    }
+
+    .prechat-editor-body {
+      padding: var(--spacing-2xl);
+    }
+
+    .prechat-editor-footer {
+      padding: var(--spacing-xl) var(--spacing-2xl);
+      border-top: 1px solid var(--capella-gray-200);
+      display: flex;
+      gap: var(--spacing-md);
+      justify-content: flex-end;
+    }
+
+    .prechat-btn-cancel {
+      background: var(--capella-gray-200);
+      color: var(--capella-gray-700);
+      border: none;
+      padding: var(--spacing-md) var(--spacing-xl);
+      border-radius: var(--radius-md);
+      font-size: var(--font-size-base);
+      font-weight: 600;
+      cursor: pointer;
+      transition: all 0.2s ease;
+    }
+
+    .prechat-btn-cancel:hover {
+      background: var(--capella-gray-300);
+    }
+
+    .prechat-btn-save {
+      background: var(--capella-red);
+      color: white;
+      border: none;
+      padding: var(--spacing-md) var(--spacing-xl);
+      border-radius: var(--radius-md);
+      font-size: var(--font-size-base);
+      font-weight: 600;
+      cursor: pointer;
+      transition: all 0.2s ease;
+    }
+
+    .prechat-btn-save:hover {
+      background: var(--capella-red-hover);
+      transform: translateY(-1px);
+    }
+
     /* Mobile Responsive */
     @media (max-width: 480px) {
       #offlineFormContainer {
@@ -406,19 +578,47 @@
         padding: 14px 20px;
         font-size: 13px;
       }
+
+      .prechat-values {
+        grid-template-columns: 1fr;
+      }
+
+      .prechat-editor-content {
+        margin: 0;
+        border-radius: var(--radius-md);
+      }
     }
   </style>
 </head>
 <body>
   <h1>Welcome to Salesforce Messaging Test</h1>
   <p>Click the chat button in the bottom right corner to start a conversation.</p>
-  <p><strong>Prechat information is automatically configured:</strong></p>
-  <ul>
-    <li><strong>Email:</strong> dogz@mailinator.com</li>
-    <li><strong>First Name:</strong> Chat</li>
-    <li><strong>Last Name:</strong> TestUser</li>
-    <li><strong>Subject:</strong> Chat Inquiry from Website</li>
-  </ul>
+
+  <!-- Prechat Information Display with Edit Button -->
+  <div class="prechat-info-box">
+    <div class="prechat-info-header">
+      <h3>Prechat Information</h3>
+      <button class="edit-prechat-btn" onclick="openPrechatEditor()">✏️ Edit</button>
+    </div>
+    <div class="prechat-values">
+      <div class="prechat-value-item">
+        <div class="prechat-value-label">Email (email_custom)</div>
+        <div class="prechat-value-text" id="display_email">dogz@mailinator.com</div>
+      </div>
+      <div class="prechat-value-item">
+        <div class="prechat-value-label">First Name</div>
+        <div class="prechat-value-text" id="display_firstName">Chat</div>
+      </div>
+      <div class="prechat-value-item">
+        <div class="prechat-value-label">Last Name</div>
+        <div class="prechat-value-text" id="display_lastName">TestUser</div>
+      </div>
+      <div class="prechat-value-item">
+        <div class="prechat-value-label">Subject</div>
+        <div class="prechat-value-text" id="display_subject">Chat Inquiry from Website</div>
+      </div>
+    </div>
+  </div>
   <div style="background: #d1ecf1; padding: 16px; border-left: 4px solid #17a2b8; margin-top: 20px; border-radius: 4px;">
     <h3 style="margin-top: 0; color: #0c5460;">🐛 Debugging Mode Active</h3>
     <p><strong>Open Browser Console (F12) to see detailed logs:</strong></p>
@@ -526,6 +726,71 @@ Expected /conversation POST payload:
         <h3>Thank you!</h3>
         <p>We've received your message and will get back to you soon.</p>
         <button class="form-success-close" onclick="hideOfflineForm()">Close</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- Prechat Editor Modal -->
+  <div id="prechatEditorModal">
+    <div class="prechat-editor-content">
+      <div class="prechat-editor-header">
+        <h3>Edit Prechat Information</h3>
+        <button class="prechat-editor-close" onclick="closePrechatEditor()" aria-label="Close">×</button>
+      </div>
+      <div class="prechat-editor-body">
+        <form id="prechatEditorForm">
+          <div class="form-group">
+            <label for="edit_email">Email (email_custom)<span class="required">*</span></label>
+            <input
+              type="email"
+              id="edit_email"
+              name="email"
+              placeholder="your.email@example.com"
+              required
+              aria-required="true"
+            >
+            <small style="color: var(--capella-gray-600); font-size: 12px; margin-top: 4px; display: block;">
+              This will be sent as "email_custom" hidden prechat field
+            </small>
+          </div>
+          <div class="form-group">
+            <label for="edit_firstName">First Name<span class="required">*</span></label>
+            <input
+              type="text"
+              id="edit_firstName"
+              name="firstName"
+              placeholder="Enter first name"
+              required
+              aria-required="true"
+            >
+          </div>
+          <div class="form-group">
+            <label for="edit_lastName">Last Name<span class="required">*</span></label>
+            <input
+              type="text"
+              id="edit_lastName"
+              name="lastName"
+              placeholder="Enter last name"
+              required
+              aria-required="true"
+            >
+          </div>
+          <div class="form-group">
+            <label for="edit_subject">Subject<span class="required">*</span></label>
+            <input
+              type="text"
+              id="edit_subject"
+              name="subject"
+              placeholder="Enter subject"
+              required
+              aria-required="true"
+            >
+          </div>
+        </form>
+      </div>
+      <div class="prechat-editor-footer">
+        <button class="prechat-btn-cancel" onclick="closePrechatEditor()">Cancel</button>
+        <button class="prechat-btn-save" onclick="savePrechatInfo()">Save Changes</button>
       </div>
     </div>
   </div>
@@ -795,6 +1060,87 @@ Expected /conversation POST payload:
       }
     }
 
+    // ============================================
+    // PRECHAT EDITOR FUNCTIONS
+    // ============================================
+
+    // Store current prechat values
+    let prechatData = {
+      email: 'dogz@mailinator.com',
+      firstName: 'Chat',
+      lastName: 'TestUser',
+      subject: 'Chat Inquiry from Website'
+    };
+
+    // Open prechat editor modal
+    function openPrechatEditor() {
+      const modal = document.getElementById('prechatEditorModal');
+
+      // Populate form with current values
+      document.getElementById('edit_email').value = prechatData.email;
+      document.getElementById('edit_firstName').value = prechatData.firstName;
+      document.getElementById('edit_lastName').value = prechatData.lastName;
+      document.getElementById('edit_subject').value = prechatData.subject;
+
+      modal.classList.add('show');
+      console.log('📝 Prechat editor opened');
+    }
+
+    // Close prechat editor modal
+    function closePrechatEditor() {
+      const modal = document.getElementById('prechatEditorModal');
+      modal.classList.remove('show');
+      console.log('❌ Prechat editor closed');
+    }
+
+    // Save prechat information
+    function savePrechatInfo() {
+      const form = document.getElementById('prechatEditorForm');
+
+      // Validate form
+      if (!form.checkValidity()) {
+        form.reportValidity();
+        return;
+      }
+
+      // Get new values
+      prechatData.email = document.getElementById('edit_email').value;
+      prechatData.firstName = document.getElementById('edit_firstName').value;
+      prechatData.lastName = document.getElementById('edit_lastName').value;
+      prechatData.subject = document.getElementById('edit_subject').value;
+
+      // Update display
+      document.getElementById('display_email').textContent = prechatData.email;
+      document.getElementById('display_firstName').textContent = prechatData.firstName;
+      document.getElementById('display_lastName').textContent = prechatData.lastName;
+      document.getElementById('display_subject').textContent = prechatData.subject;
+
+      // Update hidden prechat fields if Salesforce is already loaded
+      if (typeof embeddedservice_bootstrap !== 'undefined' && embeddedservice_bootstrap.prechatAPI) {
+        try {
+          embeddedservice_bootstrap.prechatAPI.setHiddenPrechatFields({
+            email_custom: prechatData.email
+          });
+          console.log('✅ Updated hidden prechat fields:', { email_custom: prechatData.email });
+        } catch (e) {
+          console.warn('⚠️ Could not update hidden prechat fields:', e);
+        }
+      }
+
+      // Close modal
+      closePrechatEditor();
+
+      console.log('💾 Prechat info saved:', prechatData);
+      alert('Prechat information updated! The new values will be used when you start a chat.');
+    }
+
+    // Close modal when clicking outside
+    document.getElementById('prechatEditorModal')?.addEventListener('click', (e) => {
+      if (e.target.id === 'prechatEditorModal') {
+        closePrechatEditor();
+      }
+    });
+
     // Initialize Embedded Messaging
     function initEmbeddedMessaging() {
       try {
@@ -831,18 +1177,21 @@ Expected /conversation POST payload:
       });
 
       // Set hidden prechat field (Channel Variable Name: "email_custom")
+      // Using prechatData object which can be edited by user
       console.log('🔧 Setting hidden prechat fields...');
+      console.log('📋 Using prechat data:', prechatData);
 
       try {
         embeddedservice_bootstrap.prechatAPI.setHiddenPrechatFields({
-          email_custom: 'dogz@mailinator.com'
+          email_custom: prechatData.email
         });
 
-        console.log('✅ setHiddenPrechatFields({ email_custom: "dogz@mailinator.com" }) called');
+        console.log(`✅ setHiddenPrechatFields({ email_custom: "${prechatData.email}" }) called`);
 
         window.prechatDebug.attempts.push({
           timing: 'onEmbeddedMessagingReady',
-          fields: { Email: 'dogz@mailinator.com' },
+          fields: { email_custom: prechatData.email },
+          prechatData: { ...prechatData },
           success: true,
           time: new Date().toISOString()
         });
